[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/UI/TextBox.png" type="Texture" id=1]
[ext_resource path="res://Resources/Styles/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Player/UI/Dialogue.gd" type="Script" id=3]
[ext_resource path="res://Resources/Sound/Npc/NpcTalk2.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/UI/IconTemplate.png" type="Texture" id=5]

[node name="DialogueBox" type="TextureRect" groups=["Dialogue"]]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -552.5
margin_top = -330.0
margin_right = 552.5
margin_bottom = -80.0
theme = ExtResource( 2 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Name" type="Label" parent="."]
margin_left = 232.5
margin_top = 5.0
margin_right = 348.5
margin_bottom = 45.0
rect_scale = Vector2( 1.1, 1.1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[Name]"

[node name="Text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -289.0
margin_top = -71.0
margin_right = -205.0
margin_bottom = 104.0
rect_min_size = Vector2( 750, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[text]"
autowrap = true

[node name="CharacterIcon" type="TextureRect" parent="."]
self_modulate = Color( 1, 0.619608, 0.172549, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 5 )

[node name="CharTimer" type="Timer" parent="."]
one_shot = true

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -59.0
margin_right = -15.0
margin_bottom = -13.0
text = "Next"

[node name="AudioTalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="CharTimer" to="." method="_on_CharTimer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
